--- a/repominggu8/Latihan CSS/css4.html
+++ b/repominggu8/Latihan CSS/css4.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Selektor Tag</title>
-    <style>
+ <title>Type Selector</title>
+ <style>
         p{
             color: blue;
         }
-    </style>
+ </style>
 </head>
-
 <body>
-    <div>Helo apa kabar, saya sedang belajar css.</div>
-    <p>Materi yang sedang kita bahas adalah selektor</p>
-    <div>Saat ini sedang dibahas selektor tag</div>
-    <p>Selektor tag adalah selektor untuk memilih elemen HTML berdasarkan nama tagnya</p>    
+<link rel="stylesheet" type="text/css" href="style1.css">
+<div>Helo apa kabar, saya sedang belajar CSS</div>
+<p>Materi yang sedang kita bahas adalah Selektor</p>
+<div>Saat ini sedang dibahas tentang selektor tag</div>
+<p>Selektor tag adalah selektor untuk memilih elemen HTML berdasarkan nama
+tagnya</p>
 </body>
 </html>
